k8s/00-namespace-configs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
