k8s/09-minio-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
      targetPort: 9000
    - name: console
      port: 9001
      targetPort: 9001
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: prod
spec:
  serviceName: 'minio'
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:latest
          args:
            - server
            - /data
            - '--console-address'
            - ':${MINIO_CONSOLE_PORT}'
          ports:
            - containerPort: 9000
            - containerPort: 9001
          volumeMounts:
            - name: minio-data
              mountPath: /data
      volumes:
        - name: minio-data
          hostPath:
            path: /mnt/minio-data
            type: DirectoryOrCreate
