k8s/10-redis-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: prod
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: prod
spec:
  serviceName: 'redis'
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7-alpine
          ports:
            - containerPort: 6379
          command:
            [
              'redis-server',
              '--requirepass',
              'password',
              '--appendonly',
              'yes',
              '--protected-mode',
              'no',
            ]
          volumeMounts:
            - name: redis-data
              mountPath: /data
      volumes:
        - name: redis-data
          hostPath:
            path: /mnt/redis-data
            type: DirectoryOrCreate
