k8s/21-user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: prod
  labels:
    app: user-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      serviceAccountName: default-sa
      containers:
        - name: user
          image: rahvanna/user-service:latest
          ports:
            - containerPort: 3001
              name: http
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 125m
              memory: 192Mi
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 3001
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 3001
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: prod
  labels:
    app: user-service
spec:
  selector:
    app: user-service
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
      name: http
  type: ClusterIP
