k8s/27-menu-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-service
  namespace: prod
  labels:
    app: menu-service
spec:
  replicas: 2 # banyaknya replika
  selector:
    matchLabels:
      app: menu-service
  template:
    metadata:
      labels:
        app: menu-service
    spec:
      serviceAccountName: default-sa
      containers:
        - name: menu
          image: rahvanna/menu-service:latest
          ports:
            - containerPort: 3007
              name: http
          resources:
            requests: # minimum CPU (100m) dan memori (64Mi)
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 125m
              memory: 192Mi
          # readinessProbe:
          #   httpGet:
          #     path: /health
          #     port: 3007
          #   initialDelaySeconds: 5
          #   periodSeconds: 10
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 3007
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: menu-service
  namespace: prod
  labels:
    app: menu-service
spec:
  selector:
    app: menu-service
  ports:
    - port: 3007
      targetPort: 3007
      protocol: TCP
      name: http
  type: ClusterIP
